# sleeping-policy

./: Cargo.toml  Makefile  README.md  metadata.yml
.github/workflows/: release.yml  test.yml
src/: lib.rs  settings.rs
