[package]
name = "sleeping-policy"
version = "0.1.2"
authors = ["Flavio Castelli <fcastelli@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
jmespath = "0.3"
kubewarden-policy-sdk = { version = "0.9", default-features = false }
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.7"

[dev-dependencies]
rstest = "0.18"
